1.Compiler/1.1.compiler/y.output
Terminaux inutilisés dans la grammaire

   tIF
   tWHILE
   tCOMMENT


État 15 conflits: 1 décalage/réduction
État 25 conflits: 1 décalage/réduction
État 41 conflits: 1 décalage/réduction


Grammaire

    0 $accept: entry_point $end

    1 entry_point: MainFunction

    2 MainFunction: tMAIN tPARO Args tPARF Body
    3             | tMAIN tPARO tPARF Body

    4 $@1: %empty

    5 Body: tACCO $@1 InBody tACCF

    6 InBody: Declarations Instructions
    7       | Declarations
    8       | Instructions

    9 Declarations: Declaration Declarations
   10             | Declaration

   11 Declaration: Type ListDecs tPV
   12            | Constante

   13 ListDecs: ListDec tVIRGULE ListDecs
   14         | ListDec

   15 $@2: %empty

   16 ListDec: tID $@2 tEQU Exp
   17        | tID

   18 Constante: tCONST Type ListConstDecs tPV

   19 ListConstDecs: ListConstDec tVIRGULE ListConstDecs
   20              | ListConstDec

   21 $@3: %empty

   22 ListConstDec: tID $@3 tEQU Exp

   23 Affectation: Type tID tEQU Exp tPV

   24 Instructions: Instruction Instructions
   25             | Instruction

   26 Instruction: Affectation
   27            | Print

   28 Print: tPRINTF tPARO tID tPARF tPV

   29 ListIDs: tID tVIRGULE ListIDs
   30        | tID

   31 Args: Arg tVIRGULE Args
   32     | Arg

   33 Arg: Type ListIDs

   34 Type: tINT

   35 Exp: Exp tPLUS Exp
   36    | Exp tMINUS Exp
   37    | Exp tDIV Exp
   38    | Exp tMUL Exp
   39    | tNB
   40    | tID


Terminaux, suivis des règles où ils apparaissent

$end (0) 0
error (256)
tCONST (258) 18
tINT (259) 34
tMAIN (260) 2 3
tPRINTF (261) 28
tIF (262)
tWHILE (263)
tMUL (264) 38
tPLUS (265) 35
tMINUS (266) 36
tDIV (267) 37
tEQU (268) 16 22 23
tPARO (269) 2 3 28
tPARF (270) 2 3 28
tACCO (271) 5
tACCF (272) 5
tVIRGULE (273) 13 19 29 31
tPV (274) 11 18 23 28
tNB (275) 39
tID (276) 16 17 22 23 28 29 30 40
tCOMMENT (277)


Non-terminaux, suivis des règles où ils apparaissent

$accept (23)
    à gauche: 0
entry_point (24)
    à gauche: 1, à droite: 0
MainFunction (25)
    à gauche: 2 3, à droite: 1
Body (26)
    à gauche: 5, à droite: 2 3
$@1 (27)
    à gauche: 4, à droite: 5
InBody (28)
    à gauche: 6 7 8, à droite: 5
Declarations (29)
    à gauche: 9 10, à droite: 6 7 9
Declaration (30)
    à gauche: 11 12, à droite: 9 10
ListDecs (31)
    à gauche: 13 14, à droite: 11 13
ListDec (32)
    à gauche: 16 17, à droite: 13 14
$@2 (33)
    à gauche: 15, à droite: 16
Constante (34)
    à gauche: 18, à droite: 12
ListConstDecs (35)
    à gauche: 19 20, à droite: 18 19
ListConstDec (36)
    à gauche: 22, à droite: 19 20
$@3 (37)
    à gauche: 21, à droite: 22
Affectation (38)
    à gauche: 23, à droite: 26
Instructions (39)
    à gauche: 24 25, à droite: 6 8 24
Instruction (40)
    à gauche: 26 27, à droite: 24 25
Print (41)
    à gauche: 28, à droite: 27
ListIDs (42)
    à gauche: 29 30, à droite: 29 33
Args (43)
    à gauche: 31 32, à droite: 2 31
Arg (44)
    à gauche: 33, à droite: 31 32
Type (45)
    à gauche: 34, à droite: 11 18 23 33
Exp (46)
    à gauche: 35 36 37 38 39 40, à droite: 16 22 23 35 36 37 38


État 0

    0 $accept: . entry_point $end

    tMAIN  décalage et aller à l'état 1

    entry_point   aller à l'état 2
    MainFunction  aller à l'état 3


État 1

    2 MainFunction: tMAIN . tPARO Args tPARF Body
    3             | tMAIN . tPARO tPARF Body

    tPARO  décalage et aller à l'état 4


État 2

    0 $accept: entry_point . $end

    $end  décalage et aller à l'état 5


État 3

    1 entry_point: MainFunction .

    $défaut  réduction par utilisation de la règle 1 (entry_point)


État 4

    2 MainFunction: tMAIN tPARO . Args tPARF Body
    3             | tMAIN tPARO . tPARF Body

    tINT   décalage et aller à l'état 6
    tPARF  décalage et aller à l'état 7

    Args  aller à l'état 8
    Arg   aller à l'état 9
    Type  aller à l'état 10


État 5

    0 $accept: entry_point $end .

    $défaut  accepter


État 6

   34 Type: tINT .

    $défaut  réduction par utilisation de la règle 34 (Type)


État 7

    3 MainFunction: tMAIN tPARO tPARF . Body

    tACCO  décalage et aller à l'état 11

    Body  aller à l'état 12


État 8

    2 MainFunction: tMAIN tPARO Args . tPARF Body

    tPARF  décalage et aller à l'état 13


État 9

   31 Args: Arg . tVIRGULE Args
   32     | Arg .

    tVIRGULE  décalage et aller à l'état 14

    $défaut  réduction par utilisation de la règle 32 (Args)


État 10

   33 Arg: Type . ListIDs

    tID  décalage et aller à l'état 15

    ListIDs  aller à l'état 16


État 11

    5 Body: tACCO . $@1 InBody tACCF

    $défaut  réduction par utilisation de la règle 4 ($@1)

    $@1  aller à l'état 17


État 12

    3 MainFunction: tMAIN tPARO tPARF Body .

    $défaut  réduction par utilisation de la règle 3 (MainFunction)


État 13

    2 MainFunction: tMAIN tPARO Args tPARF . Body

    tACCO  décalage et aller à l'état 11

    Body  aller à l'état 18


État 14

   31 Args: Arg tVIRGULE . Args

    tINT  décalage et aller à l'état 6

    Args  aller à l'état 19
    Arg   aller à l'état 9
    Type  aller à l'état 10


État 15

   29 ListIDs: tID . tVIRGULE ListIDs
   30        | tID .

    tVIRGULE  décalage et aller à l'état 20

    tVIRGULE  [réduction par utilisation de la règle 30 (ListIDs)]
    $défaut  réduction par utilisation de la règle 30 (ListIDs)


État 16

   33 Arg: Type ListIDs .

    $défaut  réduction par utilisation de la règle 33 (Arg)


État 17

    5 Body: tACCO $@1 . InBody tACCF

    tCONST   décalage et aller à l'état 21
    tINT     décalage et aller à l'état 6
    tPRINTF  décalage et aller à l'état 22

    InBody        aller à l'état 23
    Declarations  aller à l'état 24
    Declaration   aller à l'état 25
    Constante     aller à l'état 26
    Affectation   aller à l'état 27
    Instructions  aller à l'état 28
    Instruction   aller à l'état 29
    Print         aller à l'état 30
    Type          aller à l'état 31


État 18

    2 MainFunction: tMAIN tPARO Args tPARF Body .

    $défaut  réduction par utilisation de la règle 2 (MainFunction)


État 19

   31 Args: Arg tVIRGULE Args .

    $défaut  réduction par utilisation de la règle 31 (Args)


État 20

   29 ListIDs: tID tVIRGULE . ListIDs

    tID  décalage et aller à l'état 15

    ListIDs  aller à l'état 32


État 21

   18 Constante: tCONST . Type ListConstDecs tPV

    tINT  décalage et aller à l'état 6

    Type  aller à l'état 33


État 22

   28 Print: tPRINTF . tPARO tID tPARF tPV

    tPARO  décalage et aller à l'état 34


État 23

    5 Body: tACCO $@1 InBody . tACCF

    tACCF  décalage et aller à l'état 35


État 24

    6 InBody: Declarations . Instructions
    7       | Declarations .

    tINT     décalage et aller à l'état 6
    tPRINTF  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 7 (InBody)

    Affectation   aller à l'état 27
    Instructions  aller à l'état 36
    Instruction   aller à l'état 29
    Print         aller à l'état 30
    Type          aller à l'état 37


État 25

    9 Declarations: Declaration . Declarations
   10             | Declaration .

    tCONST  décalage et aller à l'état 21
    tINT    décalage et aller à l'état 6

    tINT      [réduction par utilisation de la règle 10 (Declarations)]
    $défaut  réduction par utilisation de la règle 10 (Declarations)

    Declarations  aller à l'état 38
    Declaration   aller à l'état 25
    Constante     aller à l'état 26
    Type          aller à l'état 39


État 26

   12 Declaration: Constante .

    $défaut  réduction par utilisation de la règle 12 (Declaration)


État 27

   26 Instruction: Affectation .

    $défaut  réduction par utilisation de la règle 26 (Instruction)


État 28

    8 InBody: Instructions .

    $défaut  réduction par utilisation de la règle 8 (InBody)


État 29

   24 Instructions: Instruction . Instructions
   25             | Instruction .

    tINT     décalage et aller à l'état 6
    tPRINTF  décalage et aller à l'état 22

    $défaut  réduction par utilisation de la règle 25 (Instructions)

    Affectation   aller à l'état 27
    Instructions  aller à l'état 40
    Instruction   aller à l'état 29
    Print         aller à l'état 30
    Type          aller à l'état 37


État 30

   27 Instruction: Print .

    $défaut  réduction par utilisation de la règle 27 (Instruction)


État 31

   11 Declaration: Type . ListDecs tPV
   23 Affectation: Type . tID tEQU Exp tPV

    tID  décalage et aller à l'état 41

    ListDecs  aller à l'état 42
    ListDec   aller à l'état 43


État 32

   29 ListIDs: tID tVIRGULE ListIDs .

    $défaut  réduction par utilisation de la règle 29 (ListIDs)


État 33

   18 Constante: tCONST Type . ListConstDecs tPV

    tID  décalage et aller à l'état 44

    ListConstDecs  aller à l'état 45
    ListConstDec   aller à l'état 46


État 34

   28 Print: tPRINTF tPARO . tID tPARF tPV

    tID  décalage et aller à l'état 47


État 35

    5 Body: tACCO $@1 InBody tACCF .

    $défaut  réduction par utilisation de la règle 5 (Body)


État 36

    6 InBody: Declarations Instructions .

    $défaut  réduction par utilisation de la règle 6 (InBody)


État 37

   23 Affectation: Type . tID tEQU Exp tPV

    tID  décalage et aller à l'état 48


État 38

    9 Declarations: Declaration Declarations .

    $défaut  réduction par utilisation de la règle 9 (Declarations)


État 39

   11 Declaration: Type . ListDecs tPV

    tID  décalage et aller à l'état 49

    ListDecs  aller à l'état 42
    ListDec   aller à l'état 43


État 40

   24 Instructions: Instruction Instructions .

    $défaut  réduction par utilisation de la règle 24 (Instructions)


État 41

   16 ListDec: tID . $@2 tEQU Exp
   17        | tID .
   23 Affectation: Type tID . tEQU Exp tPV

    tEQU  décalage et aller à l'état 50

    tEQU      [réduction par utilisation de la règle 15 ($@2)]
    $défaut  réduction par utilisation de la règle 17 (ListDec)

    $@2  aller à l'état 51


État 42

   11 Declaration: Type ListDecs . tPV

    tPV  décalage et aller à l'état 52


État 43

   13 ListDecs: ListDec . tVIRGULE ListDecs
   14         | ListDec .

    tVIRGULE  décalage et aller à l'état 53

    $défaut  réduction par utilisation de la règle 14 (ListDecs)


État 44

   22 ListConstDec: tID . $@3 tEQU Exp

    $défaut  réduction par utilisation de la règle 21 ($@3)

    $@3  aller à l'état 54


État 45

   18 Constante: tCONST Type ListConstDecs . tPV

    tPV  décalage et aller à l'état 55


État 46

   19 ListConstDecs: ListConstDec . tVIRGULE ListConstDecs
   20              | ListConstDec .

    tVIRGULE  décalage et aller à l'état 56

    $défaut  réduction par utilisation de la règle 20 (ListConstDecs)


État 47

   28 Print: tPRINTF tPARO tID . tPARF tPV

    tPARF  décalage et aller à l'état 57


État 48

   23 Affectation: Type tID . tEQU Exp tPV

    tEQU  décalage et aller à l'état 50


État 49

   16 ListDec: tID . $@2 tEQU Exp
   17        | tID .

    tEQU      réduction par utilisation de la règle 15 ($@2)
    $défaut  réduction par utilisation de la règle 17 (ListDec)

    $@2  aller à l'état 51


État 50

   23 Affectation: Type tID tEQU . Exp tPV

    tNB  décalage et aller à l'état 58
    tID  décalage et aller à l'état 59

    Exp  aller à l'état 60


État 51

   16 ListDec: tID $@2 . tEQU Exp

    tEQU  décalage et aller à l'état 61


État 52

   11 Declaration: Type ListDecs tPV .

    $défaut  réduction par utilisation de la règle 11 (Declaration)


État 53

   13 ListDecs: ListDec tVIRGULE . ListDecs

    tID  décalage et aller à l'état 49

    ListDecs  aller à l'état 62
    ListDec   aller à l'état 43


État 54

   22 ListConstDec: tID $@3 . tEQU Exp

    tEQU  décalage et aller à l'état 63


État 55

   18 Constante: tCONST Type ListConstDecs tPV .

    $défaut  réduction par utilisation de la règle 18 (Constante)


État 56

   19 ListConstDecs: ListConstDec tVIRGULE . ListConstDecs

    tID  décalage et aller à l'état 44

    ListConstDecs  aller à l'état 64
    ListConstDec   aller à l'état 46


État 57

   28 Print: tPRINTF tPARO tID tPARF . tPV

    tPV  décalage et aller à l'état 65


État 58

   39 Exp: tNB .

    $défaut  réduction par utilisation de la règle 39 (Exp)


État 59

   40 Exp: tID .

    $défaut  réduction par utilisation de la règle 40 (Exp)


État 60

   23 Affectation: Type tID tEQU Exp . tPV
   35 Exp: Exp . tPLUS Exp
   36    | Exp . tMINUS Exp
   37    | Exp . tDIV Exp
   38    | Exp . tMUL Exp

    tMUL    décalage et aller à l'état 66
    tPLUS   décalage et aller à l'état 67
    tMINUS  décalage et aller à l'état 68
    tDIV    décalage et aller à l'état 69
    tPV     décalage et aller à l'état 70


État 61

   16 ListDec: tID $@2 tEQU . Exp

    tNB  décalage et aller à l'état 58
    tID  décalage et aller à l'état 59

    Exp  aller à l'état 71


État 62

   13 ListDecs: ListDec tVIRGULE ListDecs .

    $défaut  réduction par utilisation de la règle 13 (ListDecs)


État 63

   22 ListConstDec: tID $@3 tEQU . Exp

    tNB  décalage et aller à l'état 58
    tID  décalage et aller à l'état 59

    Exp  aller à l'état 72


État 64

   19 ListConstDecs: ListConstDec tVIRGULE ListConstDecs .

    $défaut  réduction par utilisation de la règle 19 (ListConstDecs)


État 65

   28 Print: tPRINTF tPARO tID tPARF tPV .

    $défaut  réduction par utilisation de la règle 28 (Print)


État 66

   38 Exp: Exp tMUL . Exp

    tNB  décalage et aller à l'état 58
    tID  décalage et aller à l'état 59

    Exp  aller à l'état 73


État 67

   35 Exp: Exp tPLUS . Exp

    tNB  décalage et aller à l'état 58
    tID  décalage et aller à l'état 59

    Exp  aller à l'état 74


État 68

   36 Exp: Exp tMINUS . Exp

    tNB  décalage et aller à l'état 58
    tID  décalage et aller à l'état 59

    Exp  aller à l'état 75


État 69

   37 Exp: Exp tDIV . Exp

    tNB  décalage et aller à l'état 58
    tID  décalage et aller à l'état 59

    Exp  aller à l'état 76


État 70

   23 Affectation: Type tID tEQU Exp tPV .

    $défaut  réduction par utilisation de la règle 23 (Affectation)


État 71

   16 ListDec: tID $@2 tEQU Exp .
   35 Exp: Exp . tPLUS Exp
   36    | Exp . tMINUS Exp
   37    | Exp . tDIV Exp
   38    | Exp . tMUL Exp

    tMUL    décalage et aller à l'état 66
    tPLUS   décalage et aller à l'état 67
    tMINUS  décalage et aller à l'état 68
    tDIV    décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 16 (ListDec)


État 72

   22 ListConstDec: tID $@3 tEQU Exp .
   35 Exp: Exp . tPLUS Exp
   36    | Exp . tMINUS Exp
   37    | Exp . tDIV Exp
   38    | Exp . tMUL Exp

    tMUL    décalage et aller à l'état 66
    tPLUS   décalage et aller à l'état 67
    tMINUS  décalage et aller à l'état 68
    tDIV    décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 22 (ListConstDec)


État 73

   35 Exp: Exp . tPLUS Exp
   36    | Exp . tMINUS Exp
   37    | Exp . tDIV Exp
   38    | Exp . tMUL Exp
   38    | Exp tMUL Exp .

    $défaut  réduction par utilisation de la règle 38 (Exp)


État 74

   35 Exp: Exp . tPLUS Exp
   35    | Exp tPLUS Exp .
   36    | Exp . tMINUS Exp
   37    | Exp . tDIV Exp
   38    | Exp . tMUL Exp

    tMUL  décalage et aller à l'état 66
    tDIV  décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 35 (Exp)


État 75

   35 Exp: Exp . tPLUS Exp
   36    | Exp . tMINUS Exp
   36    | Exp tMINUS Exp .
   37    | Exp . tDIV Exp
   38    | Exp . tMUL Exp

    tMUL  décalage et aller à l'état 66
    tDIV  décalage et aller à l'état 69

    $défaut  réduction par utilisation de la règle 36 (Exp)


État 76

   35 Exp: Exp . tPLUS Exp
   36    | Exp . tMINUS Exp
   37    | Exp . tDIV Exp
   37    | Exp tDIV Exp .
   38    | Exp . tMUL Exp

    $défaut  réduction par utilisation de la règle 37 (Exp)
